--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------------------
-	    ODI Annual report trial
+	    ODI Annual report trial-2
         Built with Blocs
 -----------------------------------------------------------------------------------*/
  
@@ -19,6 +19,45 @@ a:hover{text-decoration: none; cursor:pointer;}
 /* Preloader */
 
 .page-preloader{position: fixed;top: 0;bottom: 0;width: 100%;z-index:100000;background:#FFFFFF url("img/pageload-spinner.gif") no-repeat center center;}
+
+/* = Web Fonts
+-------------------------------------------------------------- */
+
+@font-face {
+	font-family:'OTS-derive2-font';
+	src: url('./fonts/OTS-derive2-font/3ADA70_0_0.woff2');
+	src: url('./fonts/OTS-derive2-font/3ADA70_0_0.woff2') format('woff2'),
+	url('./fonts/OTS-derive2-font/3ADA70_0_0.woff') format('woff'),
+	url('./fonts/OTS-derive2-font/3ADA70_0_0.eot?#iefix') format('embedded-opentype'),
+	url('./fonts/OTS-derive2-font/3ADA70_0_0.ttf') format('truetype'),
+	url('./fonts/OTS-derive2-font/3ADA70_0_0.svg#OTS-derive2-font') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family:'OTS-derive3-font';
+	src: url('./fonts/OTS-derive3-font/3ADA72_0_0.woff2');
+	src: url('./fonts/OTS-derive3-font/3ADA72_0_0.woff2') format('woff2'),
+	url('./fonts/OTS-derive3-font/3ADA72_0_0.woff') format('woff'),
+	url('./fonts/OTS-derive3-font/3ADA72_0_0.eot?#iefix') format('embedded-opentype'),
+	url('./fonts/OTS-derive3-font/3ADA72_0_0.ttf') format('truetype'),
+	url('./fonts/OTS-derive3-font/3ADA72_0_0.svg#OTS-derive3-font') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family:'OTS-derive1-font';
+	src: url('./fonts/OTS-derive1-font/3ADA6F_0_0.woff2');
+	src: url('./fonts/OTS-derive1-font/3ADA6F_0_0.woff2') format('woff2'),
+	url('./fonts/OTS-derive1-font/3ADA6F_0_0.woff') format('woff'),
+	url('./fonts/OTS-derive1-font/3ADA6F_0_0.eot?#iefix') format('embedded-opentype'),
+	url('./fonts/OTS-derive1-font/3ADA6F_0_0.ttf') format('truetype'),
+	url('./fonts/OTS-derive1-font/3ADA6F_0_0.svg#OTS-derive1-font') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 
 /* = Blocs
 -------------------------------------------------------------- */
@@ -46,17 +85,11 @@ a:hover{text-decoration: none; cursor:pointer;}
 .bloc-xxl{
 	padding:200px 50px;
 }
-.bloc-xl{
-	padding:150px 50px;
-}
 .bloc-lg{
 	padding:100px 50px;
 }
 .bloc-md{
 	padding:50px;
-}
-.bloc-sm{
-	padding:20px 50px;
 }
 
 /* = Full Screen Blocs 
@@ -87,26 +120,6 @@ a:hover{text-decoration: none; cursor:pointer;}
 }
 .bloc-fill-screen .fill-bloc-bottom-edge{
 	align-self: flex-end;
-}
-
-/* = Full Width Blocs 
--------------------------------------------------------------- */
-
-.full-width-bloc{
-	padding-left:0;
-	padding-right:0;
-}
-.full-width-bloc .row{
-	margin-left:0;
-	margin-right:0;
-}
-.full-width-bloc .container{
-	width:100%;
-	max-width:100%!important;
-}
-.full-width-bloc .carousel img{
-	width:100%;
-	height:auto;
 }
 
 
@@ -200,6 +213,12 @@ a:hover{text-decoration: none; cursor:pointer;}
 .d-bloc .card .btn-wire,.d-bloc .card .btn-wire:hover,.l-bloc .btn-wire,.l-bloc .btn-wire:hover{
 	color:rgba(0,0,0,.7);
 	border-color:rgba(0,0,0,.3);
+}
+
+/* Row Margin Offsets */
+
+.voffset{
+	margin-top:30px;
 }
 
 
@@ -319,27 +338,6 @@ iframe{
 	font-size: 14px;
 	opacity: 1;
 }
-/* = iMac Device
--------------------------------------------------------------- */
-
-.blocsapp-device-imac{
-	background-repeat:no-repeat;
-	background-size:contain;
-	background-position:center;
-	display: block;
-	width:100%;
-	height:auto;
-	padding: 4% 8.5% 23.7%;
-	background-image:url("img/Apple-iMac.png");
-}
-.blocsapp-device-imac img{
-	width:100%;
-	height:auto;
-	margin: 0 auto;
-}
-.blocsapp-device-imac .embed-responsive{
-	padding-bottom: 56.25%;
-}
 
 /* Hide Object */
 .object-hidden{
@@ -359,9 +357,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	width:200px;
 }
 .h1-style{
-	font-size:100px;
+	font-size:40px;
 	font-weight:bold;
-	line-height:80px;
+	line-height:50px;
 	color:#FFFFFF!important;
 }
 .stats{
@@ -375,31 +373,36 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	font-size:20px;
 }
 .p-2-style{
-	font-size:20px;
+	font-size:18px;
 	margin-bottom:15px;
 	margin-top:8px;
 }
 .h2-style{
 	text-indent:0px;
-	font-size:38px;
+	font-size:35px;
 	margin-top:-2px;
 }
 .nav-links{
 	text-align:center;
 	font-weight:bold;
-	text-decoration:overline!important;
+	text-decoration:underline!important;
 	color:#000000!important;
 	margin-bottom:70px;
+	font-family:"OTS-derive2-font";
+	text-transform:uppercase;
+	font-size:40px;
 }
 .bloc-margin-bottom{
 	margin-bottom:-350px;
 }
 .h1-contents-style{
-	font-size:32px;
+	font-size:24px;
 }
 .h1-7-style{
 	width:77.68%;
 	margin-left:112px;
+	font-size:200px;
+	font-family:"OTS-derive3-font";
 }
 .intro-section{
 	font-weight:bold;
@@ -416,12 +419,13 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	font-size:120px;
 }
 .h1-bloc-7-style{
-	font-size:200px;
+	font-size:350px;
+	font-family:"OTS-derive1-font";
 }
 .p-8-style{
 	font-size:60px;
 	line-height:70px;
-	width:75.76%;
+	width:80%;
 }
 .img-style{
 	width:100px;
@@ -441,7 +445,95 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	font-size:26px;
 }
 .h6-47653-style{
-	font-size:28px;
+	font-size:35px;
+}
+.img-bloc-14-style{
+	width:480px;
+}
+.img-full-width{
+	display:inline-block;
+	float:left;
+	margin:-100px -100px -100px -100px;
+	padding:0px 0px 0px 0px;
+}
+.h1-4-style{
+	font-size:400px;
+	font-family:"OTS-derive3-font";
+	letter-spacing:-10px;
+}
+.bloc-margin-top{
+	margin-top:0px;
+}
+.h1-summit{
+	font-weight:bold;
+}
+.summit-stat{
+	color:#C0E136!important;
+	font-weight:normal;
+	font-size:300px;
+	background-position:left top;
+	font-family:"OTS-derive1-font";
+	letter-spacing:-0px;
+	margin:-60px -60px -60px -60px;
+}
+.summit-stat-label{
+	text-align:center;
+	font-weight:bold;
+	color:#FEFFFE!important;
+	font-size:20px;
+}
+.divider-line-{
+	border-style:solid;
+	border-color:#FEFFFE!important;
+	border-width:0px 2px 0px 0px;
+}
+.divider-line-bottom{
+	border-style:solid;
+	border-color:#FEFFFE!important;
+	height:10px;
+	margin-bottom:10px;
+	border-width:0px 0px 2px 0px;
+}
+.bloc-6167-margin-bottom{
+	margin-bottom:-186px;
+}
+.p-margin-bottom{
+	padding-top:100px;
+	font-size:22px;
+	font-weight:bold;
+	color:#FFFFFF!important;
+	margin:105px 30px 107px 30px;
+}
+.h1-margin-left{
+	font-family:"OTS-derive1-font";
+	font-size:300px;
+}
+.stat-blue{
+	color:#08DDF8!important;
+	font-size:400px;
+	font-family:"OTS-derive1-font";
+	letter-spacing:-10px;
+}
+.stat-2{
+	color:#C0E136!important;
+	font-size:300px;
+	font-family:"OTS-derive1-font";
+}
+.manifesto-header{
+	font-family:"helvetica";
+	font-size:100px;
+	text-align:center;
+	color:#FEFFFE!important;
+}
+.intro-full-width{
+	font-family:"OTS-derive3-font";
+	font-size:120px;
+	line-height:120px;
+	text-align:center;
+	color:#2254F4!important;
+}
+.p-bloc-7-margin-bottom{
+	font-size:35px;
 }
 
 /* = Colour
@@ -452,20 +544,23 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .bgc-anti-flash-white{
 	background-color:#F1F1F1;
 }
-.bgc-platinum{
-	background-color:#E7E7E7;
-}
-.bgc-caribbean-green{
-	background-color:#1CD3A6;
-}
-.bgc-caribbean-green-2{
-	background-color:#1CD3A6;
+.bgc-bright-pink{
+	background-color:#E5007C;
 }
 .bgc-purple-heart{
 	background-color:#722DA5;
 }
+.bgc-white{
+	background-color:#FFFFFF;
+}
 .bgc-pumpkin{
 	background-color:#FC6620;
+}
+.bgc-pastel-green{
+	background-color:#6BEB6C;
+}
+.bgc-palatinate-blue{
+	background-color:#2254F3;
 }
 
 /* Text colour styles */
@@ -476,11 +571,11 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .tc-palatinate-blue{
 	color:#2254F3!important;
 }
+.tc-pear{
+	color:#C0E236!important;
+}
 .tc-pastel-green{
 	color:#6BEB6C!important;
-}
-.tc-robin-egg-blue{
-	color:#07D8B5!important;
 }
 .tc-anti-flash-white{
 	color:#F1F1F1!important;
@@ -488,11 +583,26 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 
 /* Bloc image backgrounds */
 
-.bg-blocs-half-image-test{
-	background-image:url("img/blocs-half-image-test.jpg");
-}
 .bg-49059622056-2d18de4622-o{
 	background-image:url("img/49059622056_2d18de4622_o.jpg");
+}
+.bg-split-20faces-20manifesto2{
+	background-image:url("img/split%20faces%20manifesto2.png");
+}
+.bg-split-20faces-20manifesto{
+	background-image:url("img/split%20faces%20manifesto.png");
+}
+.bg-split-20faces-20manifesto3{
+	background-image:url("img/split%20faces%20manifesto3.png");
+}
+.bg-split-20faces-20manifesto4{
+	background-image:url("img/split%20faces%20manifesto4.png");
+}
+.bg-split-20faces-20manifesto5{
+	background-image:url("img/split%20faces%20manifesto5.png");
+}
+.bg-split-20faces-20manifesto6{
+	background-image:url("img/split%20faces%20manifesto6.png");
 }
 
 
@@ -562,9 +672,258 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 @media (max-width: 991px){
 	.h1-bloc-7-style{
 		width:100%;
+		font-family:"OTS-derive1-font";
+		font-size:350px;
 	}
 	.h6-1-style{
-		width:39.28%;
+		width:100%;
+		font-size:20px;
+	}
+	.summit-stat{
+		font-size:200px;
+	}
+	.h1-bloc-14-style{
+		width:85.81%;
+	}
+	.summit-stat-label{
+		padding-top:20px;
+		font-size:18px;
+	}
+	.divider-line-bottom{
+		height:10px;
+		margin-bottom:20px;
+	}
+	.p-8-style{
+		font-size:42px;
+		line-height:60px;
+		width:80%;
+	}
+	.h6-style{
+		width:91.32%;
+		font-size:20px;
+	}
+	.h6-47653-style{
+		font-size:30px;
+	}
+	.h1-style{
+		font-size:30px;
+		line-height:40px;
+	}
+	.nav-links{
+		font-family:"OTS-derive2-font";
+		font-weight:900;
+		text-transform:uppercase;
+		text-decoration:underline!important;
+	}
+	.p-style{
+		font-size:17px;
+	}
+	.h2-style{
+		font-size:32px;
+	}
+	.h1-7-style{
+		width:100%;
+	}
+	.h1-4-style{
+		font-size:294px;
+	}
+	.stat-blue{
+		font-size:220px;
+	}
+	.h1-4-000-style{
+		font-size:300px;
+	}
+	.stat-2{
+	}
+	.p-margin-bottom{
+		font-size:19px;
+	}
+	.manifesto-header{
+		font-size:75px;
+	}
+	.h1-9-style{
+		font-size:96px;
+	}
+	.intro-full-width{
+		font-size:90px;
+		line-height:100px;
+	}
+	.p-bloc-7-margin-bottom{
+		font-size:31px;
+	}
+	
+	/* MD Row Margin Offsets */
+	.voffset-clear-md{
+		margin-top:0;
+	}
+	
+	/* MD Text Margin Offsets */
+	.mg-sm-md{
+		margin-top:10px;
+		margin-bottom:5px;
+	}
+		.mg-clear-md{
+		margin:0;
+	}
+	
+}
+
+@media (max-width: 767px){
+	.img-8-style{
+		width:90px;
+	}
+	.summit-stat-label{
+		font-size:16px;
+	}
+	.p-8-style{
+		width:100%;
+		font-size:39px;
+	}
+	.h6-style{
+		width:100%;
+	}
+	.h1-4-style{
+		font-size:323px;
+	}
+	.h1-4-000-style{
+		font-size:350px;
+	}
+	.h6-47653-style{
+		font-size:25px;
+	}
+	.nav-links{
+		font-family:"OTS-derive2-font";
+	}
+	.manifesto-header{
+		font-size:55px;
+	}
+	.divider-line-bottom{
+		margin-bottom:10px;
+	}
+	.img-6-style{
+		width:90px;
+	}
+	.img-7-style{
+		width:90px;
+	}
+	.img-9-style{
+		width:90px;
+	}
+	.img-10-style{
+		width:90px;
+	}
+	.img-11-style{
+		width:90px;
+	}
+	.img-12-style{
+		width:90px;
+	}
+	.img-13-style{
+		width:90px;
+	}
+	.img-14-style{
+		width:90px;
+	}
+	.img-15-style{
+		width:90px;
+	}
+	.img-16-style{
+		width:90px;
+	}
+	.img-17-style{
+		width:90px;
+	}
+	.h1-9-style{
+		font-size:69px;
+	}
+	.intro-full-width{
+		font-size:60px;
+		line-height:70px;
+	}
+	
+	/* Small Text Margin Offsets */
+	.mg-lg-sm{
+		margin-top: 10px;
+		margin-bottom:40px;
+	}
+	
+}
+
+@media (max-width: 575px){
+	.h2-style{
+		font-size:30px;
+	}
+	.p-style{
+		font-size:16px;
+		line-height:20px;
+	}
+	.h1-7-style{
+		font-size:36px;
+		width:100%;
+	}
+	.h1-bloc-7-style{
+		font-size:200px;
+	}
+	.nav-links{
+		margin-bottom:0px;
+		font-family:"OTS-derive2-font";
+	}
+	.h1-style{
+		font-size:22px;
+		line-height:30px;
+	}
+	.p-8-style{
+		font-size:25px;
+		line-height:40px;
+		width:100%;
+	}
+	.h6-style{
+		width:100%;
+	}
+	.h1-4-style{
+		font-size:250px;
+	}
+	.stat-blue{
+		font-size:150px;
+		text-align:center;
+	}
+	.h1-4-000-style{
+		font-size:200px;
+	}
+	.h6-47653-style{
+		font-size:20px;
+	}
+	.manifesto-header{
+		font-size:25px;
+	}
+	.divider-line-{
+		border-right-width:0px;
+	}
+	.summit-stat{
+		margin-bottom:-60px;
+	}
+	.bloc-0-margin-bottom{
+		margin:30px 30px 30px 30px;
+	}
+	.intro-full-width{
+		font-size:45px;
+		line-height:55px;
+	}
+	.p-bloc-7-margin-bottom{
+		font-size:25px;
+	}
+	
+	/* Mobile Text Margin Offsets */
+	.mg-sm-xs{
+		margin-top:10px;
+		margin-bottom:5px;
+	}
+		.mg-lg-xs{
+		margin-top: 10px;
+		margin-bottom:40px;
+	}
+		.mg-clear-xs{
+		margin:0;
 	}
 	
 }
