further bolding etc

--- a/style.css
+++ b/style.css
@@ -465,7 +465,8 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	margin-bottom:70px;
 	font-family:"OTS-derive2-font";
 	text-transform:uppercase;
-	font-size:40px;
+	font-size:35px;
+	letter-spacing:1px;
 }
 .bloc-margin-bottom{
 	margin-bottom:-350px;
@@ -1142,7 +1143,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .svg-bg-data-trusts-2{
 	background-position:center center;
 	background-size:auto 100%;
-	background-image:url("img/data-trust-double-image-1.jpg");
+	background-image:url("img/data-trust-double-image.jpg");
 	background-repeat:no-repeat;
 }
 .stat-header{
@@ -1172,7 +1173,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 .dac-bg{
 	background-position:left center;
-	background-image:url("img/49059107088_79731c798c_o-1.jpg");
+	background-image:url("img/49059107088_79731c798c_o.jpg");
 }
 .link-style{
 	font-weight:bold;
@@ -1407,6 +1408,16 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	font-family:"OTS-derive3-font";
 	background-size:auto auto;
 }
+.navigation-header-intro{
+	text-transform:uppercase;
+	font-size:34px;
+	text-decoration:none;
+	font-weight:bold;
+}
+.link-hide-style{
+	font-style:italic;
+	font-weight:bold;
+}
 
 /* = Colour
 -------------------------------------------------------------- */
@@ -1419,8 +1430,8 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .bgc-white{
 	background-color:#FFFFFF;
 }
-.bgc-white-smoke{
-	background-color:#F5F4F4;
+.bgc-dodger-blue{
+	background-color:#11A0FF;
 }
 .bgc-lavender-pink{
 	background-color:#F2ADD9;
@@ -1434,8 +1445,8 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .bgc-neon-fuchsia{
 	background-color:#F558B9;
 }
-.bgc-pumpkin{
-	background-color:#FF7C28;
+.bgc-international-orange{
+	background-color:#FF5800;
 }
 .bgc-capri{
 	background-color:#00B6FF;
@@ -1443,17 +1454,20 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .bgc-dark-pastel-green{
 	background-color:#0DBC36;
 }
-.bgc-dodger-blue{
+.bgc-dodger-blue-2{
 	background-color:#178BFF;
 }
 .bgc-pear{
-	background-color:#CAE444;
+	background-color:#C0E136;
 }
 .bgc-palatinate-blue{
 	background-color:#2153F4;
 }
 .bgc-caribbean-green{
 	background-color:#1CD3A6;
+}
+.bgc-white-smoke{
+	background-color:#F5F4F4;
 }
 .bgc-purple-heart{
 	background-color:#722DA5;
@@ -1485,9 +1499,6 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .tc-black{
 	color:#000000!important;
 }
-.tc-palatinate-blue{
-	color:#2153F4!important;
-}
 .tc-oxford-blue{
 	color:#1A1D50!important;
 }
@@ -1498,9 +1509,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	color:#178BFF!important;
 }
 .tc-pear{
-	color:#CAE444!important;
+	color:#C0E136!important;
 }
-.tc-palatinate-blue-2{
+.tc-palatinate-blue{
 	color:#2153F4!important;
 }
 .tc-neon-fuchsia{
@@ -1520,6 +1531,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 .tc-bright-pink{
 	color:#E5007B!important;
+}
+.tc-palatinate-blue-2{
+	color:#2153F4!important;
 }
 .tc-rose-bonbon{
 	color:#EF3AAB!important;
@@ -1546,10 +1560,10 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	color:#1a42c3!important;
 }
 .ltc-pear{
-	color:#CAE444!important;
+	color:#C0E136!important;
 }
 .ltc-pear:hover{
-	color:#a2b636!important;
+	color:#9ab42b!important;
 }
 
 /* Bloc image backgrounds */
@@ -1559,9 +1573,6 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 .bg-49059619306-b34f1e160f-o-20-281-29{
 	background-image:url("img/49059619306_b34f1e160f_o%20%281%29.jpg");
-}
-.bg-data-trust-double-image-1{
-	background-image:url("img/data-trust-double-image-1.jpg");
 }
 .bg-DoxBox0819{
 	background-image:url("img/DoxBox0819.jpg");
@@ -1589,6 +1600,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 .bg-double-image-Randd-20v2{
 	background-image:url("img/double-image-Randd%20v2.jpg");
+}
+.bg-double-image-data-trusts{
+	background-image:url("img/double-image-data-trusts.jpg");
 }
 
 
